# kanari-mail

./: .env  Cargo.toml
src/: main.rs
src/models/: email.rs  mod.rs  response.rs
src/routes/: subscribers.rs
