[package]
name = "kanari-mail"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time"] }
dotenv = "0.15.0"
hyper = { version = "1.5.2", features = ["full"] }
