[package]
name = "kanari-mail"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# Database
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "chrono", "time"] }
dotenv = "0.15.0"
hyper = { version = "1.5.2", features = ["full"] }


tower-http = { version = "0.6.2", features = ["cors", "trace", "limit"] }
tower = { version = "0.4", features = ["limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.19.0", features = ["derive"] }